tests/machine/x/ocaml/group_by_multi_join.error
File "/tmp/TestOCamlCompiler_VMValid_Goldengroup_by_multi_join178303563/001/group_by_multi_join.ml", line 38, characters 56-62:
38 |         __res0 := { part = ps.part; value = (ps.cost *. ps.qty) } :: !__res0;
                                                             ^^^^^^
Error: This expression has type int but an expression was expected of type
         float
